feat: 添加 选项页面

--- a/public/options.html
+++ b/public/options.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>popup</title>
+  <title>不止右键 选项配置</title>
 </head>
 
 <body>
   <div id="root"></div>
-  <script type="module" src="./js/popup.js"></script>
+  <script type="module" src="./js/options.js"></script>
 </body>
 
 </html>
